# Automata

./: CMakeLists.txt  README.md
shaders/: voxel.frag  voxel.vert
src/: main.cpp
src/app/: App.cpp  App.hpp
src/render/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp
src/sim/: Grid.cpp  Grid.hpp  Materials.hpp  Rules.cpp  Rules.hpp
src/utils/: Shader.cpp  Shader.hpp
